--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ApplicationPlanCadre.Models.Programme
+﻿@model ApplicationPlanCadre.Models.DevisMinistere
 
 @{
     ViewBag.Title = "Console d'administration";
