--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/_PartialList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ApplicationPlanCadre.Models.Programme>
+﻿@model IEnumerable<ApplicationPlanCadre.Models.DevisMinistere>
 
 <div class="crud-list">
     <table>
