--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/Edit.cshtml
@@ -17,8 +17,8 @@
             <h3>Modifier un contexte de réalisation</h3>
 
             <div class="form-group">
-                @Html.TextAreaFor(model => model.contexteRealisation1, new { @rows = "3", @maxlength = "300", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.contexteRealisation1, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(model => model.description, new { @rows = "3", @maxlength = "300", @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <input type="submit" value="Confirmer" class="fancy-button" />
