--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Delete.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Delete.cshtml
@@ -8,7 +8,7 @@
     <div class="form-horizontal single-action">
 
         <h1>Supprimer un élément de compétence</h1>
-        <h3>@Model.element</h3>
+        <h3>@Model.description</h3>
 
         <hr />
 
