--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ApplicationPlanCadre.Models.ElementCompetence
 
 @{
-    ViewBag.Title = Model.element;
+    ViewBag.Title = Model.description;
 }
 
 <div id="super-view">
@@ -11,7 +11,7 @@
         <div id="info-header">
             <h3>Élément de compétence</h3>
             <div>
-                <h1>@Html.DisplayFor(model => model.element)</h1>
+                <h1>@Html.DisplayFor(model => model.description)</h1>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
                 <ol type="1">
                     @foreach (var criterePerformance in Model.CriterePerformance.OrderBy(ec => ec.numero))
                     {
-                        <li>@Html.DisplayFor(cp => criterePerformance.criterePerformance1)</li>
+                        <li>@Html.DisplayFor(cp => criterePerformance.description)</li>
                     }
                 </ol>
 
