--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Create.cshtml
@@ -30,10 +30,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.enonceCompetence1, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.enonceCompetence1, new {@rows = "3", @maxlength = "300", @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.enonceCompetence1, "", new { @class = "text-danger" })
+                    @Html.TextAreaFor(model => model.description, new {@rows = "3", @maxlength = "300", @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                 </div>
             </div>
 
