--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
@@ -108,7 +108,7 @@
             clear: both;
         }
         li{
-            margin-bottom:10px;
+            margin: 15px 0;
         }
         
         
