--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
@@ -6,55 +6,50 @@
 
 <div class="container">
 
-    <div class="single-action col-md-offset-2 col-md-8">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.idProgramme)
 
-        <div class="form-box">
-
+        <div class="form-horizontal form-box single-action">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <h3>Modification d'un programme</h3>
             <hr />
+            <div class="champ">
+                @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
+            </div>
 
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-
-                <div class="form-horizontal">
-                    <p class="text-danger">@ViewBag.messageError</p>
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.idProgramme)
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.EnteteProgramme, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            @Html.DropDownList("codeProgramme", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.EnteteProgramme, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" } })
-                            @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.codeSpecialisation, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.codeSpecialisation, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 2 } })
-                            @Html.ValidationMessageFor(model => model.codeSpecialisation, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-offset-3">
-                            <input type="submit" value="Enregistrer" />
-                            <div class="fancy-button rouge" onclick="location.href='@Url.Action("Create")'">Retour</div>
-                        </div>
-                    </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.EnteteProgramme, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    @Html.DropDownList("codeProgramme", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.EnteteProgramme, "", new { @class = "text-danger" })
                 </div>
-            }
-            
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" } })
+                    @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.codeSpecialisation, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.codeSpecialisation, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 2 } })
+                    @Html.ValidationMessageFor(model => model.codeSpecialisation, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-9">
+                    <input type="submit" value="Confirmer" class="fancy-button" />
+                    <a href='@Url.Action("Create")' class="fancy-button rouge">Annuler</a>
+                </div>
+            </div>
         </div>
-    </div>
+    }
+
 </div>
