--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Info.cshtml
@@ -17,23 +17,48 @@
         </div>
 
         <div id="info-detail">
-            <h2>Contextes de réalisations</h2>
-            <ul>
-                @foreach (var contexteRealisation in Model.ContexteRealisation)
-                {
-                    <li>@Html.DisplayFor(ec => contexteRealisation.contexteRealisation1)</li>
-                }
-            </ul>
 
-            <hr />
-            <h2>Éléments de compétence</h2>
-
-            @foreach (var elementCompetence in Model.ElementCompetence)
+            @if (Model.ContexteRealisation.Count > 0)
             {
-                <a class="info-child clearfix" href='@Url.RouteUrl("Info-elementComp", new { id = elementCompetence.idElement })'>
-                    <p>@Html.DisplayFor(ec => elementCompetence.element)</p>
-                </a>
+                <h2>Contextes de réalisations</h2>
+                <ul>
+                    @foreach (var contexteRealisation in Model.ContexteRealisation)
+                    {
+                        <li>@Html.DisplayFor(ec => contexteRealisation.contexteRealisation1)</li>
+                    }
+                </ul>
+
+                <hr />
             }
+
+            @if (Model.ElementCompetence.Count > 0)
+            {
+                
+                <h2>Éléments de compétence</h2>
+
+                foreach (var elementCompetence in Model.ElementCompetence.OrderBy(ec => ec.numero))
+                {
+                    <a class="info-child clearfix" href='@Url.Action("Info", "ElementCompetence", new { idElement = elementCompetence.idElement })'>
+                        <p class="gauche">@Html.DisplayFor(ec => elementCompetence.element)</p>
+                        <p class="droite">@Html.DisplayFor(ec => elementCompetence.numero)</p>
+                    </a>
+                }
+
+                <hr />
+            }
+
+            <h2>Options</h2>
+
+            <div class="champ">
+                <a class="fancy-button" onclick="location.href='@Url.Action("Edit", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</a>
+                <a class="fancy-button" onclick="location.href='@Url.Action("Create", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un élément</a>
+                <a class="fancy-button" onclick="location.href='@Url.Action("Delete", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-trash"><!----></span> Supprimer l'énoncé</a>
+                @if (Model.ElementCompetence.Count() > 1)
+                {
+                    <a class="fancy-button" onclick="location.href='@Url.Action("Order", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-sort"><!----></span> Changer l'ordre des éléments</a>
+                }
+                <a class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "Programme", new { idProgramme = Model.idProgramme })'">Retour</a>
+            </div>
 
         </div>
     </div>
