--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Create.cshtml
@@ -13,7 +13,7 @@
 
         <div class="horizontal-form">
 
-            <h1>@Model.ElementCompetence.element</h1>
+            <h1>@Model.ElementCompetence.description</h1>
 
             <hr />
 
