--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
@@ -167,7 +167,7 @@ input[type="file"] {
     transition: 0.1s;
 }
 
-.crud-list td:hover {
+.crud-list tr:hover td {
     background-color: #f2f4f7;
 }
 
