--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/ConsoleAdmin.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/ConsoleAdmin.cshtml
@@ -16,7 +16,7 @@
             <p>Gestion des devis ministériels</p>
         </a>
 
-        <a class="icon">
+        <a class="icon" href='@Url.Action("Create", "ConsoleProgramme")'>
             <span class="glyphicon glyphicon-education"></span>
             <p>Gestion des programmes</p>
         </a>
