--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ApplicationPlanCadre.Models.DevisMinistere
+﻿@model ApplicationPlanCadre.Models.Programme
 
 @{
     ViewBag.Title = "Edit";
@@ -9,37 +9,37 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.idDevis)
+        @Html.HiddenFor(model => model.idProgramme)
 
         <div class="form-horizontal form-box single-action">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <h3>Modification d'un devisMinistere</h3>
+            <h3>Modification d'un programme</h3>
             <hr />
             <div class="champ">
                 @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.EnteteProgramme, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @Html.DropDownList("codeProgramme", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.EnteteProgramme, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.idDevis, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-6">
+                    @Html.DropDownList("idDevis", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.idDevis, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.nom, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.nom, new { htmlAttributes = new { @class = "form-control col-md-6", @maxlength = 50 } })
+                    @Html.ValidationMessageFor(model => model.nom, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
+                <div class="col-md-6">
                     @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" } })
                     @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.codeSpecialisation, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @Html.EditorFor(model => model.codeSpecialisation, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 2 } })
-                    @Html.ValidationMessageFor(model => model.codeSpecialisation, "", new { @class = "text-danger" })
                 </div>
             </div>
 
