--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/Index.cshtml
@@ -1,7 +1,23 @@
-﻿
+﻿@model IEnumerable<ApplicationPlanCadre.Models.PlanCadre>
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "PlanCadre";
 }
 
-<h2>Index</h2>
+<div id="super-view">
+    @Html.Action("_TreeView")
+    <div id="info-display" class="container-fluid">
+        <div id="info-detail">
+            <h1>Devis ministériels</h1>
+            <hr />
+            @foreach (var planCadre in Model)
+            {
+                <a class="info-child clearfix" href='@Url.Action("Info", new { idPlanCadre = planCadre.idPlanCadre })'>
+                    <p class="gauche">@Html.DisplayFor(ec => planCadre.titreCours)</p>
+                    <p class="droite">@Html.DisplayFor(model => planCadre.Programme.idProgramme)-@Html.DisplayFor(model => planCadre.Programme.annee)-@Html.DisplayFor(model => planCadre.Programme.DevisMinistere.codeSpecialisation)</p>
+                </a>
+            }
+        </div>
+    </div>
+</div>
 
