--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/recherche.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/recherche.cshtml
@@ -10,8 +10,12 @@
 </style>
 
 
+<div>
+    <br />
+    <br />
+    <br />
+</div>
 
-<h2>recherche</h2>
 
 @using (Ajax.BeginForm("Rechercher", "recherche", new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "resultArea" }, new { defaultbutton ="searchBtn"}))
 {
