--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewBag.Title = "RapportProgramme";
     Layout = null;
-    
+
 }
 
 <style type="text/css">
@@ -72,9 +72,16 @@
     }.entete {
         margin-bottom: 25px;
     }
+     .titre{
+         font-size:40px;
+         width:100%;
+         
+        
+         
+     }
         
        
-        .soustitre,.enonce {
+        .soustitre,.enonce,.titre {
             font-weight: bold;
         }
         .info-left, .info-right {
@@ -123,53 +130,76 @@
 
 
 <div class="pdf">
+<div class="info-Programme">
     @foreach (SecondaryProgramme prog in Model.Programme)
     {
-        <div class="info-Programme">
-            <div class="entete">
+
+        <div class="entete">
+           
+            <div style="text-align:center;">
                 <br />
-                <br />
-                <span class="nom">@Html.DisplayFor(x => prog.nom)</span>
-                <br />
-                <span class="codeSpecialisation"> @Html.DisplayFor(x => prog.codeProgramme)-@Html.DisplayFor(x => prog.codeSpecialisation)-@Html.DisplayFor(x => prog.annee)</span>
-                <br />
-                <span class="specialisation">@Html.DisplayFor(x => prog.specialisation)</span>
-                <br />
+                <span class="titre">Rapport de programme</span>
             </div>
+              
+            <br />
+            <br />
+            <span class="soustitre" style="font-size:45px;">Nom</span>
+            <br />
+            <span class="nom">@Html.DisplayFor(x => prog.nom)</span>
+            <br />
+            @foreach (SecondaryDevisMinistere devis in Model.DevisMinistere)
+            {
+                <span class="soustitre" style="font-size:35px;">Identifiant</span>
+                <br />
+                <span class="codeSpecialisation"> @Html.DisplayFor(x => devis.codeProgramme)-@Html.DisplayFor(x => devis.codeSpecialisation)-@Html.DisplayFor(x => prog.annee)</span>
+                <br />
+                <span class="soustitre" style="font-size:35px;">Spécialisation</span>
+                <br />
+                <span class="specialisation">@Html.DisplayFor(x => devis.specialisation)</span>
+                    <br />
+            }
+
+        </div>
+        foreach (SecondaryDevisMinistere devis in Model.DevisMinistere)
+        {
             <div class="info-left">
                 <span class="soustitre">Sanction</span>
                 <br />
-                <span class="data">@Html.DisplayFor(x => prog.sanction)</span>
+                <span class="data">@Html.DisplayFor(x => devis.sanction)</span>
                 <br />
                 <span class="soustitre">Nombre d'unités</span>
                 <br />
-                <span class="data">@Html.DisplayFor(x => prog.nbUnite) unités</span>
+                <span class="data">@Html.DisplayFor(x => devis.nbUnite) unités</span>
                 <br />
-                <span class="soustitre">Condition</span>
+                <span class="soustitre">Condition d'admission</span>
                 <br />
-                <span class="data">@Html.DisplayFor(x =>prog.condition)</span>
+                <span class="data">@Html.DisplayFor(x => devis.condition)</span>
             </div>
             <div class="info-right">
-                <span class="soustitre">Heures de formation géréral</span>
+                <span class="soustitre">Heures de la formation gérérale</span>
                 <br />
-                <span class="data">@Html.DisplayFor(x => prog.nbHeurefrmGeneral) h</span>
+                <span class="data">@Html.DisplayFor(x => devis.nbHeureFrmGenerale) h</span>
                 <br />
-                <span class="soustitre">Heures de formation spécifique</span>
+                <span class="soustitre">Heures de la formation spécifique</span>
                 <br />
-                <span class="data">@Html.DisplayFor(x => prog.nbHeurefrmSpecifique) h</span>
+                <span class="data">@Html.DisplayFor(x => devis.nbHeureFrmSpecifique) h</span>
                 <br />
                 <span class="soustitre">Total</span>
                 <br />
-                <span class="data">@Html.DisplayFor(x => prog.total) h</span>
+                <span class="data">@Html.DisplayFor(x => devis.total) h</span>
                 <br />
-
             </div>
+        }
 
-        </div>
     }
-    
-   
-    
+
+</div>
+
+            
+        
+
+
+
     <table cellspacing="0"> 
         <thead>
             <tr>
@@ -192,16 +222,13 @@
                     @*<div class="contain">*@
                     <div style="width:100%">
                         <span class="enonce">
-                            @Html.DisplayFor(x => enonceCmpt.codeCompetence) - @Html.DisplayFor(x => enonceCmpt.enonceCompetence1)
+                            @Html.DisplayFor(x => enonceCmpt.codeCompetence) - @Html.DisplayFor(x => enonceCmpt.description)
                         </span>
                         <br />
                         <br />
                     </div>
                         <div class="enonce-left">
-                           
-                                
-                            
-                            <span class="context">Contexte de réalisation</span>
+                           <span class="context">Contextes de réalisations</span>
                             <ul>
                                 
                                 @foreach (SecondaryContexteRealisation contexteReal in Model.ContexteRealisation)
@@ -209,7 +236,7 @@
                                     if (enonceCmpt.idCompetence == contexteReal.idCompetence)
                                     {
                                         <li class="element">
-                                            @Html.DisplayFor(x => contexteReal.contexteRealisation1)
+                                            @Html.DisplayFor(x => contexteReal.description)
                                         </li>
                                         
 
@@ -220,7 +247,7 @@
                         </div>
                     
                         <div class="enonce-right">
-                            <span class="elemCompt">Élement de compétence</span>
+                            <span class="elemCompt">Élements de compétences</span>
                             <ul>
                                 
                                 @foreach (SecondaryElementCompetence element in Model.ElementCompetence)
@@ -229,7 +256,7 @@
                                     if (element.idCompetence == enonceCmpt.idCompetence)
                                     {
                                         <li class="element">
-                                            @Html.DisplayFor(x => element.element)
+                                            @Html.DisplayFor(x => element.description)
                                         </li>
                                         
                                     }
@@ -247,4 +274,3 @@
 </div>
 
 
-@*@Html.Raw(Model.ElementCometence)*@
