--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/static/footer.html
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/static/footer.html
@@ -33,7 +33,7 @@
     y = n.getFullYear();
     m = n.getMonth() + 1;
     d = n.getDate();
-    document.getElementById("date").innerHTML = m + "/" + d + "/" + y;
+    document.getElementById("date").innerHTML = y + "/" + m + "/" + d;
     </script>
 </body>
 </html>
