Nom des rôles (Ridiculement trop dur pour rien)

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Index.cshtml
@@ -6,7 +6,6 @@
 
 <div class="container">
 
-
     <h1>Liste des utilisateurs</h1>
 
     <div class="form-group">
@@ -27,6 +26,9 @@
                     @Html.DisplayNameFor(model => model.Email)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.roleNames)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.EmailConfirmed)
                 </th>
             </tr>
@@ -41,10 +43,20 @@
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
-                        @foreach(var role in item.Roles)
+                        @for (int i = 0; i < item.roleNames.Count(); i++)
                         {
-                            @role.RoleId;
+                            string name = item.roleNames.ElementAt(i);
+
+                            if (i == item.roleNames.Count() - 1)
+                            {
+                                @Html.Raw(name)
+                                break;
+                            }
+                            @Html.Raw(name)@Html.Raw(", ")
                         }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EmailConfirmed)
                     </td>
                 </tr>
             }
