--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/ConsoleAdmin.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/ConsoleAdmin.cshtml
@@ -21,7 +21,7 @@
             <p>Gestion des programmes</p>
         </a>
 
-        <a class="icon">
+        <a class="icon" href='@Url.Action("Index", "Account")'>
             <span class="glyphicon glyphicon-user"></span>
             <p>Gestion des utilisateurs</p>
         </a>
